--- a/todo.txt
+++ b/todo.txt
@@ -1,3 +1,3 @@
-1. data channel chat
-2. stats report, each second, display fps
-3. read about firebase
+1. video/ audio switch on/off
+2. hide firebase implementation in separate class
+3. add readme
